--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@offerzen/design-tokens": ["libs/design-tokens/src/index.js"]
+      "@offerzen/design-tokens": ["libs/design-tokens/src/index.js"],
+      "@org2/ui-core": ["libs/ui-core/src/index.js"]
     }
   },
   "exclude": ["node_modules", "tmp"]
