--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "ts-jest": "^29.1.0"
   },
   "dependencies": {
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
+    "@emotion/css": "^11.10.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
