--- a/package.json
+++ b/package.json
@@ -13,8 +13,17 @@
     "@nx/linter": "16.6.0",
     "@nx/react": "^16.6.0",
     "@nx/rollup": "16.6.0",
+    "@nx/storybook": "16.6.0",
+    "@nx/web": "16.6.0",
     "@nx/workspace": "16.6.0",
     "@rollup/plugin-url": "^7.0.0",
+    "@storybook/addon-essentials": "7.2.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/core-server": "7.2.0",
+    "@storybook/jest": "~0.1.0",
+    "@storybook/react-webpack5": "7.2.0",
+    "@storybook/test-runner": "^0.11.0",
+    "@storybook/testing-library": "~0.2.0",
     "@svgr/rollup": "^8.0.1",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.14.2",
@@ -23,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "babel-jest": "^29.4.1",
+    "core-js": "^3.6.5",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.27.5",
@@ -33,7 +43,9 @@
     "jest-environment-jsdom": "^29.4.1",
     "nx": "16.6.0",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.1.3"
   },
   "dependencies": {
     "@emotion/css": "^11.10.6",
