--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nx/rollup": "16.6.0",
     "@nx/storybook": "16.6.0",
     "@nx/web": "16.6.0",
+    "@nx/webpack": "^16.6.0",
     "@nx/workspace": "16.6.0",
     "@rollup/plugin-url": "^7.0.0",
     "@storybook/addon-essentials": "7.2.0",
