--- a/package.json
+++ b/package.json
@@ -7,34 +7,34 @@
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
     "@emotion/babel-plugin": "11.11.0",
-    "@nx/eslint-plugin": "16.6.0",
-    "@nx/jest": "16.6.0",
-    "@nx/js": "16.6.0",
-    "@nx/linter": "16.6.0",
-    "@nx/react": "^16.6.0",
-    "@nx/rollup": "16.6.0",
-    "@nx/storybook": "16.6.0",
-    "@nx/web": "16.6.0",
-    "@nx/webpack": "^16.6.0",
-    "@nx/workspace": "16.6.0",
+    "@nx/eslint-plugin": "16.7.0",
+    "@nx/jest": "16.7.0",
+    "@nx/js": "16.7.0",
+    "@nx/linter": "16.7.0",
+    "@nx/react": "16.7.0",
+    "@nx/rollup": "16.7.0",
+    "@nx/storybook": "16.7.0",
+    "@nx/web": "16.7.0",
+    "@nx/webpack": "16.7.0",
+    "@nx/workspace": "16.7.0",
     "@rollup/plugin-url": "^7.0.0",
-    "@storybook/addon-essentials": "7.2.0",
-    "@storybook/addon-interactions": "^7.1.0",
-    "@storybook/core-server": "7.2.0",
+    "@storybook/addon-essentials": "7.3.1",
+    "@storybook/addon-interactions": "7.3.1",
+    "@storybook/core-server": "7.3.1",
     "@storybook/jest": "~0.1.0",
-    "@storybook/react-webpack5": "7.2.0",
-    "@storybook/test-runner": "^0.11.0",
+    "@storybook/react-webpack5": "7.3.1",
+    "@storybook/test-runner": "0.13.0",
     "@storybook/testing-library": "~0.2.0",
     "@svgr/rollup": "^8.0.1",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.14.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "babel-jest": "^29.4.1",
     "core-js": "^3.6.5",
-    "eslint": "~8.15.0",
+    "eslint": "8.46.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
@@ -42,7 +42,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "16.6.0",
+    "nx": "16.7.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -55,3 +55,4 @@
     "tslib": "^2.3.0"
   }
 }
+
