--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@offerzen/design-tokens": ["libs/design-tokens/src/index.js"],
+      "@offerzen/ui-datepickers": ["libs/ui-datepickers/src/index.js"],
       "@org2/ui-core": ["libs/ui-core/src/index.js"]
     }
   },
