--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,7 @@
     "paths": {
       "@offerzen/design-tokens": ["libs/design-tokens/src/index.js"],
       "@offerzen/ui-datepickers": ["libs/ui-datepickers/src/index.js"],
-      "@org2/ui-core": ["libs/ui-core/src/index.js"]
+      "@offerzen/ui-core": ["libs/ui-core/src/index.js"]
     }
   },
   "exclude": ["node_modules", "tmp"]
