--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,8 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@offerzen/design-tokens": ["libs/design-tokens/src/index.js"],
-      "@offerzen/ui-datepickers": ["libs/ui-datepickers/src/index.js"],
-      "@offerzen/ui-core": ["libs/ui-core/src/index.js"]
+      "@offerzen/ui-core": ["libs/ui-core/src/index.js"],
+      "@org2/react/ui-datepickers": ["libs/react/ui-datepickers/src/index.js"]
     }
   },
   "exclude": ["node_modules", "tmp"]
