--- a/libs/react/design-tokens/project.json
+++ b/libs/react/design-tokens/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "design-tokens",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/design-tokens/src",
+  "name": "react-design-tokens",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/react/design-tokens/src",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -9,23 +9,23 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/design-tokens/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["libs/react/design-tokens/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "build": {
       "executor": "@nx/rollup:rollup",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/libs/design-tokens",
-        "tsConfig": "libs/design-tokens/tsconfig.lib.json",
-        "project": "libs/design-tokens/package.json",
-        "entryFile": "libs/design-tokens/src/index.js",
+        "outputPath": "dist/libs/react/design-tokens",
+        "tsConfig": "libs/react/design-tokens/tsconfig.lib.json",
+        "project": "libs/react/design-tokens/package.json",
+        "entryFile": "libs/react/design-tokens/src/index.js",
         "external": ["react", "react-dom", "@emotion/react/jsx-runtime"],
         "rollupConfig": "@nx/react/plugins/bundle-rollup",
         "compiler": "babel",
         "assets": [
           {
-            "glob": "libs/design-tokens/README.md",
+            "glob": "libs/react/design-tokens/README.md",
             "input": ".",
             "output": "."
           }
@@ -36,7 +36,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/design-tokens/jest.config.js",
+        "jestConfig": "libs/react/design-tokens/jest.config.js",
         "passWithNoTests": true
       },
       "configurations": {
