--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@offerzen/design-tokens": ["libs/design-tokens/src/index.js"],
+      "@offerzen/react/design-tokens": [
+        "libs/react/design-tokens/src/index.js"
+      ],
       "@offerzen/ui-core": ["libs/ui-core/src/index.js"],
       "@org2/react/ui-datepickers": ["libs/react/ui-datepickers/src/index.js"]
     }
