--- a/libs/react/ui-core/project.json
+++ b/libs/react/ui-core/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "ui-core",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/ui-core/src",
+  "name": "react-ui-core",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/react/ui-core/src",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -9,23 +9,23 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/ui-core/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["libs/react/ui-core/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "build": {
       "executor": "@nx/rollup:rollup",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/libs/ui-core",
-        "tsConfig": "libs/ui-core/tsconfig.lib.json",
-        "project": "libs/ui-core/package.json",
-        "entryFile": "libs/ui-core/src/index.js",
+        "outputPath": "dist/libs/react/ui-core",
+        "tsConfig": "libs/react/ui-core/tsconfig.lib.json",
+        "project": "libs/react/ui-core/package.json",
+        "entryFile": "libs/react/ui-core/src/index.js",
         "external": ["react", "react-dom", "react/jsx-runtime"],
         "rollupConfig": "@nx/react/plugins/bundle-rollup",
         "compiler": "babel",
         "assets": [
           {
-            "glob": "libs/ui-core/README.md",
+            "glob": "libs/react/ui-core/README.md",
             "input": ".",
             "output": "."
           }
@@ -36,7 +36,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/ui-core/jest.config.js",
+        "jestConfig": "libs/react/ui-core/jest.config.js",
         "passWithNoTests": true
       },
       "configurations": {
@@ -50,7 +50,7 @@
       "executor": "@nx/storybook:storybook",
       "options": {
         "port": 4400,
-        "configDir": "libs/ui-core/.storybook"
+        "configDir": "libs/react/ui-core/.storybook"
       },
       "configurations": {
         "ci": {
@@ -63,7 +63,7 @@
       "outputs": ["{options.outputDir}"],
       "options": {
         "outputDir": "dist/storybook/ui-core",
-        "configDir": "libs/ui-core/.storybook"
+        "configDir": "libs/react/ui-core/.storybook"
       },
       "configurations": {
         "ci": {
@@ -74,18 +74,18 @@
     "test-storybook": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "test-storybook -c libs/ui-core/.storybook --url=http://localhost:4400"
+        "command": "test-storybook -c libs/react/ui-core/.storybook --url=http://localhost:4400"
       }
     },
     "static-storybook": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "ui-core:build-storybook",
+        "buildTarget": "react-ui-core:build-storybook",
         "staticFilePath": "dist/storybook/ui-core"
       },
       "configurations": {
         "ci": {
-          "buildTarget": "ui-core:build-storybook:ci"
+          "buildTarget": "react-ui-core:build-storybook:ci"
         }
       }
     }
