create a core design-tokens library
no react dependencies etc
`npx nx generate @nx/js:library --name=design-tokens --directory=core --importPath=@offerzen/core/design-tokens --no-interactive`

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@offerzen/core/design-tokens": ["libs/core/design-tokens/src/index.ts"],
       "@offerzen/react/design-tokens": [
         "libs/react/design-tokens/src/index.js"
       ],
