--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/testing-library": "~0.2.0",
     "@svgr/rollup": "^8.0.1",
     "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -43,6 +44,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "16.7.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
