Split design-tokens into react and core equivalents

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,12 +15,14 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@offerzen/core/design-tokens": ["libs/core/design-tokens/src/index.ts"],
-      "@offerzen/react/design-tokens": [
+      "@offerzen/core-design-tokens": ["libs/core/design-tokens/src/index.ts"],
+      "@offerzen/react-design-tokens": [
         "libs/react/design-tokens/src/index.js"
       ],
-      "@offerzen/react/ui-core": ["libs/react/ui-core/src/index.js"],
-      "@org2/react/ui-datepickers": ["libs/react/ui-datepickers/src/index.js"]
+      "@offerzen/react-ui-core": ["libs/react/ui-core/src/index.js"],
+      "@offerzen/react-ui-datepickers": [
+        "libs/react/ui-datepickers/src/index.js"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
