Create a lib of common marketplace only components
`npx nx generate @nx/react:library --name=common --bundler=rollup --directory=libs/marketplace --component=false --importPath=@offerzen/marketplace-common --js=true --publishable=true --style=@emotion/styled --buildable=true --no-interactive`

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@offerzen/core-design-tokens": ["libs/core/design-tokens/src/index.ts"],
+      "@offerzen/marketplace-common": ["libs/marketplace/common/src/index.js"],
       "@offerzen/react-design-tokens": [
         "libs/react/design-tokens/src/index.js"
       ],
