--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "date-fns": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "twemoji": "^14.0.2"
   }
 }
