--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@emotion/babel-plugin": "11.11.0",
     "@nx/eslint-plugin": "16.7.0",
     "@nx/jest": "16.7.0",
@@ -22,7 +24,7 @@
     "@storybook/addon-essentials": "7.3.1",
     "@storybook/addon-interactions": "7.3.1",
     "@storybook/core-server": "7.3.1",
-    "@storybook/jest": "~0.1.0",
+    "@storybook/jest": "~0.2.0",
     "@storybook/react-webpack5": "7.3.1",
     "@storybook/test-runner": "0.13.0",
     "@storybook/testing-library": "~0.2.0",
@@ -42,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "^0.6.13",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
