--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jsdom": "~22.1.0",
     "nx": "16.7.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
