--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@storybook/addon-interactions": "7.3.1",
     "@storybook/core-server": "7.3.1",
     "@storybook/jest": "~0.2.0",
+    "@storybook/react-vite": "7.3.1",
     "@storybook/react-webpack5": "7.3.1",
     "@storybook/test-runner": "0.13.0",
     "@storybook/testing-library": "~0.2.0",
@@ -53,7 +54,8 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "vite": "~4.3.9"
   },
   "dependencies": {
     "@emotion/css": "^11.10.6",
